--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="sendMessage">Send Message</string>
     <string name="message">Message</string>
     <string name="hub">Hub</string>
+    <string name="readSMS">Read SMS</string>
 </resources>
