--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,6 +4,9 @@
     <string name="app_name">SMSecure</string>
     <string name="action_settings">Settings</string>
     
+    <string name="addConversation">+Convo</string>
+    <string name="editConversations">-Convo</string>
+    
     <string name="generatePad">Generate Pad</string>
     <string name="encryptText">Encrypt</string>
     <string name="decryptText">Decrypt</string>
