--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -13,5 +13,10 @@
     <string name="sendMessage">Send Message</string>
     <string name="message">Message</string>
     <string name="hub">Hub</string>
+    
     <string name="readSMS">Read SMS</string>
+    <string name="generateOTP">Generate OTP</string>
+    <string name="shareOTP">Share OTP</string>
+    <string name="clear">Clear</string>
+    <string name="send">Send</string>
 </resources>
