--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="loadOTP">Load</string>
     <string name="clear">Clear</string>
     <string name="send">Send</string>
+    <string name="generateOneTimePadButtonClick">generateOneTimePad</string>
 </resources>
