SMS communication fully functional
A joint effort between Sam and Evan R to make SMS communication work
properly. Encryption/decryption/etc.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -18,7 +18,7 @@
     <string name="generateOTP">Gen</string>
     <string name="shareOTP">Share</string>
     <string name="loadOTP">Load</string>
-    <string name="clear">Clear</string>
+    <string name="backToHub">Back</string>
     <string name="send">Send</string>
     <string name="generateOneTimePadButtonClick">generateOneTimePad</string>
 </resources>
