--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="action_settings">Settings</string>
     
     <string name="addConversation">+Convo</string>
+    <string name="setLocalNumber">Set Local #</string>
     
     <string name="generatePad">Generate Pad</string>
     <string name="encryptText">Encrypt</string>
