Basic Bluetooth Functionality
Share/Receive Bluetooth functions both check and enable bluetooth.
Recive prompts user to enable discoverability for 120 seconds.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -17,6 +17,8 @@
 	<string name="readSMS">Read SMS</string>
 	<string name="generateOTP">Gen</string>
 	<string name="shareOTP">Share</string>
+	<string name="sendBT">ShareBT</string>
+	<string name="receiveBT">ReceiveBT</string>
 	<string name="loadOTP">Load</string>
 	<string name="backToHub">Back</string>
 	<string name="send">Send</string>
