--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,8 +5,8 @@
 	<string name="action_settings">Settings</string>
 	
 	<string name="addConversation">+Convo</string>
-	<string name="setLocalNumber">Set Local #</string>
 	<string name="settings">Settings</string>
+	<string name="help">Help</string>
 	
 	<string name="generatePad">Generate Pad</string>
 	<string name="encryptText">Encrypt</string>
@@ -17,12 +17,6 @@
 	
 	<string name="readSMS">Read SMS</string>
 	<string name="padManager">Pad Manager</string>
-	<string name="generateOTP">Gen</string>
-	<string name="shareOTP">Share</string>
-	<string name="sendBT">ShareBT</string>
-	<string name="receiveBT">ReceiveBT</string>
-	<string name="loadOTP">Load</string>
 	<string name="backToHub">Back</string>
 	<string name="send">Send</string>
-	<string name="generateOneTimePadButtonClick">generateOneTimePad</string>
 </resources>
